# goxave

./: .gitignore  README.md
backend/: .gitignore  config.py  main.py  manual_run_scraper.py  pyproject.toml  test.py
backend/goxave/: common.py  config.py  run.py
backend/goxave/api/: auth.py  middleware.py
backend/goxave/api/adapters/browser_automation/: playwright.py
backend/goxave/api/adapters/parsers/html/: bs4.py
backend/goxave/api/adapters/repositories/: mongodb.py
backend/goxave/api/adapters/scrapers/: abc.py  amazon.py  datablitz.py  jbl_store.py  lazada.py
backend/goxave/api/domain/: commands.py  events.py  model.py  utilities.py
backend/goxave/api/routes/: hello.py  login.py  product.py  user.py
backend/goxave/api/service_layer/: command_handlers.py  event_handlers.py  message_bus.py  unit_of_work.py
backend/goxave/tasks/: ping_pong.py  queue.py  scraper.py
backend/goxave/utilities/: currencies.py
backend/src/service_layer/: message_bus.py
backend/tests/: conftest.py
backend/tests/integration_tests/: test_hello.py
backend/tests/integration_tests/test_adapters/test_repositories/test_mongodb/: test_login_repo.py  test_product_repo.py  test_user_repo.py
backend/tests/integration_tests/test_service_layer/: test_uow.py
backend/tests/unit_tests/: test_event_handlers.py
backend/tests/unit_tests/test_domain/: test_product_domain.py
ops/: .sops.yaml  Makefile  certbot-docker-compose.enc.yml  docker-compose.enc.yml
web/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
(+34 files in other folders)
