[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pymongo>=4.14.0",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.1",
]
